# steem-purple

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.in  README  README.md  autogen.sh  cl.c  configure.ac  message.c  mrim-util.c  update-locale.sh
cmake/: cmake_uninstall.cmake.in
debian/: changelog  control  copyright  rules  watch
packaging/Windows/: mrim-prpl.iss
pixmaps/: CMakeLists.txt  Makefile.in
po/: CMakeLists.txt  Makefile.in  mrim-prpl-underbush-ru_RU.po  mrim-prpl-underbush.pot  ru.po
src/: CMakeLists.txt  Makefile.in  cl.c  config.h  ft.c  ft.h  mrim-util.c  mrim.c  mrim.h  statuses.c  statuses.h
testsrc/: CMakeLists.txt  Makefile.in  config.h.in  mrim-util-test.c  tests.c  tests.h
