if(UNIX)
    install(FILES "${PACKAGE_NAME}16.png" DESTINATION "${PIDGIN_PROTOCOLS_DIRECTORY}/16/" RENAME "${PACKAGE_NAME}.png")
    install(FILES "${PACKAGE_NAME}22.png" DESTINATION "${PIDGIN_PROTOCOLS_DIRECTORY}/22/" RENAME "${PACKAGE_NAME}.png")
    install(FILES "${PACKAGE_NAME}48.png" DESTINATION "${PIDGIN_PROTOCOLS_DIRECTORY}/48/" RENAME "${PACKAGE_NAME}.png")
endif()
